--- a/JavaAndroidApp/app/build.gradle
+++ b/JavaAndroidApp/app/build.gradle
@@ -19,6 +19,15 @@ android {
         ndk {
             abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
         }
+
+        python{
+            version "3.8"
+            pip{
+                install "numpy"
+                install "opencv-python"
+                install "pillow"
+            }
+        }
     }
 
     buildTypes {
@@ -36,7 +45,7 @@ android {
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
