--- a/JavaAndroidApp/app/src/main/AndroidManifest.xml
+++ b/JavaAndroidApp/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:theme="@style/Theme.Test"
         tools:targetApi="31">
         <activity
+            android:name=".build_cube"
+            android:exported="false" />
+        <activity
             android:name=".CameraActivity"
             android:exported="false">
             <meta-data
